--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,9 @@
 }
 
 :root {
-  --orange: #f78b00;
-  --blue: #00285f;
-  --gray: #ededed;
+  --red: #d9071f;
+  --black: #000000;
+  --gray: #f7f7f7;
 }
 
 html,
@@ -25,7 +25,7 @@ body {
 header {
   width: 100%;
   height: 500px;
-  background: var(--orange);
+  background: var(--red);
 }
 
 .content {
@@ -48,8 +48,10 @@ nav {
 
 .brand {
   font-size: 30px;
-  color: var(--blue);
+  color: var(--black);
   cursor: pointer;
+  -webkit-text-stroke-width: 0.3px;
+  -webkit-text-stroke-color: var(--red);
 }
 
 nav ul {
@@ -64,38 +66,38 @@ nav ul li {
 }
 
 nav ul li a {
-  color: var(--blue);
+  color: var(--black);
   text-decoration: none;
   font-weight: bold;
-
 }
 
 nav ul li a:hover {
-  color: #ffffff83;
+  color: #ffffff;
 }
 
 nav ul button {
-  border: 1px solid var(--blue);
+  border: 1px solid var(--black);
   background: transparent;
   padding: 8px 40px;
   cursor: pointer;
   margin-left: 30px;
-  color: var(--blue);
+  color: var(--black);
   font-weight: bold;
   border-radius: 4px;
+  
 }
 
 nav ul button:hover {
   transition: background, color 0.6s;
-  background: var(--blue);
-  color: white;
+  background: var(--black);
+  color: rgb(255, 255, 255);
 }
 
 .content .header-block {
   max-width: 1000px;
   min-width: 300px;
   height: 450px;
-  background: var(--blue);
+  background: var(--red);
   border-radius: 8px;
   box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
@@ -167,7 +169,7 @@ section .filter-card {
   height: 50px;
   border-radius: 0px 4px 4px 0px;
   border: none;
-  background: var(--blue);
+  background: var(--black);
   color: white;
   cursor: pointer;
   font-size: 1.1em;
@@ -176,7 +178,7 @@ section .filter-card {
 
 .search-button:hover {
   background: #dedede;
-  color: var(--blue);
+  color: var(--black);
 }
 
 .title-wrapper-catalog {
@@ -229,7 +231,7 @@ section .card-item {
   width: 90%;
   padding: 15px 0px;
   border: none;
-  background: var(--blue);
+  background: var(--black);
   border-radius: 4px;
   color: white;
   font-weight: bold;
@@ -241,7 +243,7 @@ section .card-item {
 
 .card-item button:hover {
   background: #dedede;
-  color: var(--blue);
+  color: var(--black);
 }
 
 /* About */
@@ -361,7 +363,7 @@ footer {
 footer .main {
   width: 100%;
   height: 200px;
-  background: var(--orange);
+  background: var(--red);
   padding: 20px 10px;
 }
 
@@ -378,7 +380,7 @@ footer .main {
 .footer-rental,
 .footer-contact,
 .footer-social {
-  color: white;
+  color: rgb(1, 1, 1);
   height: 100%;
   min-height: 100px;
 }
@@ -403,7 +405,7 @@ footer .main {
 footer .last {
   width: 100%;
   height: 50px;
-  background: var(--blue);
+  background: var(--black);
   color: white;
   display: flex;
   align-items: center;
