--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
 
 header {
   width: 100%;
-  height: 500px;
+  height: 150px;
   background: var(--red);
 }
 
@@ -47,7 +47,7 @@ nav {
 }
 
 .brand {
-  font-size: 30px;
+  font-size: 35px;
   color: var(--black);
   cursor: pointer;
   -webkit-text-stroke-width: 0.3px;
@@ -69,6 +69,7 @@ nav ul li a {
   color: var(--black);
   text-decoration: none;
   font-weight: bold;
+  font-size: 20px;
 }
 
 nav ul li a:hover {
@@ -105,19 +106,20 @@ nav ul button:hover {
   position: relative;
   z-index: 10;
   padding: 10px;
+  margin-top: 3%;
 }
 
 .header-block img {
   width: 50%;
   position: absolute;
-  right: 2%;
+  right: 0%;
   bottom: 2%;
 }
 
 .header-block .text {
   position: absolute;
-  bottom: 30%;
-  left: 10%;
+  bottom: 35%;
+  left: 8%;
 }
 
 .header-block .text h2 {
@@ -192,7 +194,7 @@ section .card-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   grid-gap: 30px;
-  padding-top: 50px;
+  padding-top: 500px;
 }
 
 section .card-item {
@@ -217,6 +219,11 @@ section .card-item {
   width: 85%;
 }
 
+.card-item h3 {
+  width: 90%;
+  text-align: center;
+}
+
 .card-item h4 {
   width: 90%;
 }
@@ -225,6 +232,10 @@ section .card-item {
   width: 90%;
   font-style: italic;
   color: #00000070;
+}
+
+.card-item h1 {
+  color: #00b30e;
 }
 
 .card-item button {
@@ -363,7 +374,7 @@ footer {
 footer .main {
   width: 100%;
   height: 200px;
-  background: var(--red);
+  background: #262626;
   padding: 20px 10px;
 }
 
@@ -380,14 +391,27 @@ footer .main {
 .footer-rental,
 .footer-contact,
 .footer-social {
-  color: rgb(1, 1, 1);
+  color: rgb(255, 255, 255);
   height: 100%;
   min-height: 100px;
+  font-size: 20px;
+}
+
+.footer-company h6{
+  margin-top: 10%;
+
 }
 
 .footer-contact{
   width: 280px;
 }
+
+.footer-contact h6{
+  margin-top: 2%;
+
+}
+
+
 
 .footer-links h4 {
   margin-bottom: 10px;
