--- a/css/styles.css
+++ b/css/styles.css
@@ -26,15 +26,10 @@ header {
   width: 100%;
   height: 150px;
   background: var(--red);
-}
-
-.content {
-  max-width: 1000px;
-  min-width: 300px;
-  margin: 0 auto;
+  margin: 0 0;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 0;
 }
 
 nav {
@@ -44,55 +39,38 @@ nav {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
 }
 
-.brand {
-  font-size: 35px;
-  color: var(--black);
-  cursor: pointer;
+nav img{
+  width: 25%;
+  margin-top: 40px;
 }
 
 nav ul {
   display: flex;
   flex-direction: row;
+  margin-right: 5%;
 }
 
 nav ul li {
   list-style: none;
-  padding: 10px;
+  padding: 12px;
   cursor: pointer;
 }
 
 nav ul li a {
-  color: var(--black);
+  color: white;
   text-decoration: none;
   font-weight: bold;
   font-size: 20px;
 }
 
 nav ul li a:hover {
-  color: #ffffff;
-}
-
-nav ul button {
-  border: 1px solid var(--black);
-  background: transparent;
-  padding: 8px 40px;
-  cursor: pointer;
-  margin-left: 30px;
   color: var(--black);
-  font-weight: bold;
-  border-radius: 4px;
-  
 }
 
-nav ul button:hover {
-  transition: background, color 0.6s;
-  background: var(--black);
-  color: rgb(255, 255, 255);
-}
-
-.content .header-block {
+ .header-block {
   max-width: 1000px;
   height: 450px;
   background: var(--red);
@@ -103,7 +81,7 @@ nav ul button:hover {
   position: relative;
   z-index: 10;
   padding: 10px;
-  margin-top: 4%;
+  margin: 1.5% auto;
 }
 
 .header-block img {
@@ -136,53 +114,20 @@ nav ul button:hover {
   transition: transform 0.4s;
 }
 
+.content2 {
+  max-width: 1000px;
+  min-width: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
 /* Product Catalog */
 
 section .catalog {
   width: 100vw;
   padding: 100px;
-}
-
-section .filter-card {
-  width: 980px;
-  height: 150px;
-  background: var(--gray);
-  border-radius: 8px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.search-input {
-  width: 700px;
-  height: 50px;
-  border: none;
-  border-radius: 4px 0px 0px 4px;
-  text-indent: 10px;
-}
-
-.search-button {
-  width: 150px;
-  height: 50px;
-  border-radius: 0px 4px 4px 0px;
-  border: none;
-  background: var(--black);
-  color: white;
-  cursor: pointer;
-  font-size: 1.1em;
-  transition: 0.2s ease;
-}
-
-.search-button:hover {
-  background: #dedede;
-  color: var(--black);
-}
-
-.title-wrapper-catalog {
-  margin-top: 200px;
-  padding-bottom: 20px;
 }
 
 section .card-wrapper {
@@ -191,7 +136,6 @@ section .card-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   grid-gap: 30px;
-  padding-top: 500px;
 }
 
 section .card-item {
@@ -372,7 +316,9 @@ footer .main {
   width: 100%;
   height: 200px;
   background: #262626;
-  padding: 20px 10px;
+  padding: 20px 15%;
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 
 .footer-links {
@@ -392,10 +338,11 @@ footer .main {
   height: 100%;
   min-height: 100px;
   font-size: 20px;
+  margin-left: 10%;
 }
 
 .footer-company h6{
-  margin-top: 10%;
+  margin-top: 5%;
 
 }
 
@@ -407,8 +354,6 @@ footer .main {
   margin-top: 2%;
 
 }
-
-
 
 .footer-links h4 {
   margin-bottom: 10px;
@@ -436,16 +381,30 @@ footer .last {
 /* Responsive adjustments */
 
 @media (max-width: 500px) {
-  nav ul li {
-    display: 90%;
-}
-  .brand {
-    font-size: 30px;
-    text-align: center;
+
+  nav {
+    /* width: 100%; */
+    /* height: 125px; */
+    /* display: flex; */
+    flex-direction: column;
+    /* justify-content: space-between; */
+  
+  
   }
+  
+
+  nav ul li {
+    display: 80%;
+    margin-top: -100px;
+}
+
+  nav img{
+    width: 70%;
+    margin-top: -90px;
+  }  
 
   nav ul li a {
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .content .header-block {
